--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-refresh": "^0.11.0",
+    "react-toastify": "^9.0.1",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
