--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "react-redux": "^7.2.8",
     "react-refresh": "^0.11.0",
     "react-toastify": "^9.0.1",
+    "redux-deep-persist": "^1.0.6",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
@@ -96,6 +98,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   },
   "jest": {
     "roots": [
