--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "prompts": "^2.4.2",
     "react": "^18.0.0",
     "react-app-polyfill": "^3.0.0",
+    "react-content-loader": "^6.2.0",
     "react-dev-utils": "^12.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
