--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-transition-group": "^4.4.5",
     "axios": "^0.26.1",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
@@ -65,6 +66,7 @@
     "react-redux": "^7.2.8",
     "react-refresh": "^0.11.0",
     "react-toastify": "^9.0.1",
+    "react-transition-group": "^4.4.2",
     "redux-deep-persist": "^1.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
