refactor: change webpack to vite

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,23 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "allowJs": false,
     "skipLibCheck": true,
-    "esModuleInterop": true,
+    "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    // Запрещает класть в переменную null без явного объявления
-    "strictNullChecks": true,
-    // Делает вызовы методов bind, call, apply строго типизированными
-    "strictBindCallApply": true,
-    // Делает более строгими типы функций
-    "strictFunctionTypes": true,
-    // Запрещает объявление непустого поля класса без инициализации
-    "strictPropertyInitialization": true
+    "jsx": "react-jsx"
   },
   "include": [
     "src"
-  ]
+  ],
+  "references": [{ "path": "./tsconfig.node.json"}]
 }
