--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "weather",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "eslint": "eslint --fix --quiet --ext .js,.jsx,.ts,.tsx src/**/*",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.3.0",
@@ -28,11 +30,26 @@
     "web-vitals": "3.3.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "@types/react-transition-group": "4.4.5",
+    "@typescript-eslint/eslint-plugin": "5.13.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "eslint": "8.36.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-config-prettier": "8.7.0",
+    "eslint-import-resolver-typescript": "3.5.3",
+    "eslint-plugin-css-import-order": "1.1.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "prettier": "2.8.4",
+    "prettier-eslint": "15.0.1",
+    "typescript": "4.9.3",
+    "vite": "4.2.0"
   }
 }
