--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "weather",
   "private": true,
   "version": "0.1.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "eslint": "eslint --fix --quiet --ext .js,.jsx,.ts,.tsx src/**/*",
+    "stylelint": "stylelint --fix \"src/**/*.{css,scss}\"",
     "prettier": "prettier --write ."
   },
   "dependencies": {
@@ -49,6 +49,13 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "prettier": "2.8.4",
     "prettier-eslint": "15.0.1",
+    "sass": "1.59.3",
+    "stylelint": "15.3.0",
+    "stylelint-config-recess-order": "4.0.0",
+    "stylelint-config-recommended-scss": "9.0.1",
+    "stylelint-config-standard-scss": "7.0.1",
+    "stylelint-order": "6.0.3",
+    "stylelint-selector-bem-pattern": "2.1.1",
     "typescript": "4.9.3",
     "vite": "4.2.0"
   }
