--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "0.2.0",
     "@reduxjs/toolkit": "1.9.3",
     "classnames": "2.3.2",
+    "lodash": "4.17.21",
     "modern-normalize": "1.1.0",
     "react": "^18.2.0",
     "react-content-loader": "6.2.1",
@@ -30,6 +31,7 @@
     "web-vitals": "3.3.0"
   },
   "devDependencies": {
+    "@types/lodash": "4.14.195",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-transition-group": "4.4.5",
