--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "eslint": "eslint --fix --quiet --ext .js,.jsx,.ts,.tsx src/**/*",
+    "eslint": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
     "stylelint": "stylelint --fix \"src/**/*.{css,scss}\"",
     "prettier": "prettier --write ."
   },
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/lodash": "4.14.195",
+    "@types/node": "20.5.7",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-transition-group": "4.4.5",
