refactor: changes interfaces to types

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.1.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "eslint": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
@@ -54,8 +54,10 @@
     "prettier-eslint": "15.0.1",
     "sass": "1.59.3",
     "stylelint": "15.3.0",
+    "stylelint-config-clean-order": "^5.2.0",
     "stylelint-config-recess-order": "4.0.0",
     "stylelint-config-recommended-scss": "9.0.1",
+    "stylelint-config-scss-favorite": "^1.0.1",
     "stylelint-config-standard-scss": "7.0.1",
     "stylelint-order": "6.0.3",
     "stylelint-selector-bem-pattern": "2.1.1",
