--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "8.0.5",
     "react-toastify": "9.1.1",
     "react-transition-group": "4.4.5",
+    "react-virtualized-auto-sizer": "1.0.21",
     "redux-deep-persist": "1.0.7",
     "redux-persist": "6.0.0",
     "web-vitals": "3.3.0"
