--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "lefthook": "1.6.1",
     "prettier": "2.8.4",
     "prettier-eslint": "15.0.1",
     "sass": "1.59.3",
